# UE-SoulForge-Physics

./: .gitignore  MEGAGRANT_INFO.txt  README.md  build.py  build_summary.txt  run_lab.bat
core_cpp/: SoulForgePhysX.uplugin
core_cpp/Binaries/Win64/: UnrealEditor-Win64-DebugGame.modules  UnrealEditor.modules  soulforge_physx.lib
core_cpp/Source/SoulForgePhysX/: SoulForgePhysX.Build.cs
core_cpp/Source/SoulForgePhysX/Private/: RustPhysicsComponent.cpp  SoulForgeBridge.cpp  SoulForgeDestructible.cpp  SoulForgeFragmentRenderer.cpp  SoulForgeHelper.cpp  SoulForgeInsightBridge.cpp  SoulForgePhysX.cpp  SoulForgePowerComponent.cpp  SoulForgeSubsystem.cpp  SoulForgeVFXLibrary.cpp
core_cpp/Source/SoulForgePhysX/Public/: RustPhysicsComponent.h  SoulForgeBridge.h  SoulForgeDestructible.h  SoulForgeFragmentRenderer.h  SoulForgeHelper.h  SoulForgePhysX.h  (+4 more)
core_python/: requirements.txt  sf_unreal_bridge.py  test_swarm.py
core_rust/: Cargo.toml  build.err  build_errors.txt  build_errors_2.txt  build_out.txt  cargo_err.txt  check_rust.py  compile_errors.txt  error_log.txt  final_error.txt  output.txt  stderr.txt  stderr_final.txt  stderr_fresh.txt  stderr_omega.txt
core_rust/src/: build_errors.txt  ffi.rs  fragment_sim.rs  lib.rs  node_buffer.rs  physics.rs  powers.rs  proxy.rs  swarm.rs  types.rs
core_rust/src/military/: blast.rs  fracture.rs  gurney.rs  material.rs  mod.rs  spatial_hash.rs
core_rust/src/physics/: engine.rs  mod.rs
core_rust/src/physics/solvers/: classic.rs  explosions.rs  mod.rs
lab/: index.html  server.py  server_final_log.txt  server_log.txt
